@@ -1,0 +1,2 @@
+ALTER TABLE /*_*/user_groups
+	MODIFY COLUMN ug_group varbinary(32) NOT NULL default '';
